20090902 rzx.c: rzx_sentinel is intended to reduce tstates by
         RZX_SENTINEL_TIME_REDUCE (Fred).
20090902 tape.c: remove unused variable block from tape_play (Fred).
20090902 debugger/disassemble.c,printer.c: reduce GCC 4.2 string format warnings
         (Fred).
20090902 ui/win32/{options.pl,options-{resource,header}.pl}: Win32: Implemented
	 comboboxes in options dialogs (Marek).
20090903 disk/disk.c: remove a couple of unneeded settings of bpt (Fred).
20090903 ui/gtk/picture.c: use a compat_fd rather than an int (Fred).
20090903 debugger/{command.c,debugger_internals.h}: we put a size_t argument in
         the result argument of debugger_command_input rather than an int
         (Fred).
20090903 ui/win32/picture.c: use a compat_fd rather than an int (Fred).
20090916 README: change reference to CVS to be Subversion (Fred).
20091006 ui/uijoystick.c: only send a joystick button event if there has been
         an actual change in button state since last poll in the libjsw code
         (fixes bug #2863656) (thanks, Phil Reynolds) (Fred).
20091007 settings.pl: numeric settings don't need to be non-zero to save into
         the settings file (fixes bug #2873277) (thanks, Phil Reynolds) (Fred).
20091016 fuse.1: update link to ResiDOS homepage in fuse man page (patch
         #2875612) (Gergely Szasz).
20091019 disk/disk.c: correct mapping of sector length to SECLEN_* macros
         (patch #2875613) (Gergely Szasz).
20091022 disk/{beta.[ch],opus.c,plusd.c},ide/{divide.c,zxatasp.c,zxcf.c},if1.c,
         if2.c,machines/{pentagon.c,pentagon1024.c,pentagon512.c,scorpion.c},
         memory.[ch]: make each peripheral/machine that uses memory paged in via
         /ROMCS have its own copy of the relevant struct (part of patch
         #2880415) (Gergely Szasz).
20091113 man/fuse.1,menu.[ch],menu_data.dat: add a menu item with a hot key to
         allow full screen and windowed mode switching for SDL (feature
         request #1515888) (György Szombathelyi).